# Rust_Currency_convertor_project

./: Cargo.toml  Interface.html  README.md  index.html  main.js  main.rs  style.css
src-tauri/: Cargo.toml  exchange_rates.json  historical_rates.json  tauri.conf.json
src-tauri/src/: main.rs
ui/: index.html  index.js  style.css
ui/Project Rust/Project Rust/: Interface.html  script.js  style.css
ui/Project Rust/by_gold/src-tauri/: Cargo.toml  tauri.conf.json
ui/Project Rust/by_gold/src-tauri/src/: main.rs
ui/Project Rust/by_gold/ui/: index.html  script.js  styles.css
ui/_new_old/: index.html  index.js  index_2.html  styles.css
ui/_old/: index.html  index.js  styles.css
